--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "@prisma/client": "4.16.2",
     "cors": "^2.8.5",
     "express": "4.18.2",
-    "json-stringify-safe": "^5.0.1"
+    "json-stringify-safe": "^5.0.1",
+    "pg": "^8.11.2"
   },
   "devDependencies": {
     "@types/express": "4.17.17",
