--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon index.ts",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "build": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "4.16.2",
