--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "@prisma/client": "4.16.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "4.18.2",
     "json-stringify-safe": "^5.0.1",
+    "jsonwebtoken": "^9.0.1",
     "pg": "^8.11.2"
   },
   "devDependencies": {
