--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
+    "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
     "usehooks-ts": "^2.9.1"
   },
