--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "4.18.2",
+    "express-fileupload": "^1.4.0",
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^9.0.1",
-    "pg": "^8.11.2"
+    "pg": "^8.11.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "4.17.17",
